--- a/client/src/pages/pay/Pay.scss
+++ b/client/src/pages/pay/Pay.scss
@@ -1,7 +1,40 @@
 .pay {
-   // display: flex;
-   // justify-content: center;
-   // align-items: center;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
    padding: 2rem 1rem;
-   height: 70dvh;
+   min-height: 70dvh;
+   background-image: linear-gradient(to right top, #eca4976e, #ecdaaa63, #d2ecb559, #c0ecb56c, #b6eccb59, #baece950, #bfcfeb59, #c3caeb52, #d6bee962, #e4b2e649, #e1aad042, #d89cc436);
+
+   .testData {
+      display: grid;
+      grid-template-columns: auto auto;
+
+      @media screen and (width<492px) {
+         grid-template-columns: auto;
+      }
+   }
+
+   .link {
+      display: flex;
+      width: 300px;
+      justify-content: space-around;
+
+   }
+
+   button {
+      width: max-content;
+      padding: 0.75rem 1.25rem;
+      margin: 1rem 0;
+      background-color: #14a360f4;
+      color: white;
+      border-radius: var(--borderRadius);
+      transition: all 0.3s ease-in-out;
+      border: none;
+
+      &:hover {
+         border-radius: 2.5rem;
+      }
+   }
 }
